--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
   <header class="header">
     <nav class="top-nav">
       <ul>
-        <li><a href="#">LinkedIn</a></li>
-        <li><a href="#">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/brandonholderman/">LinkedIn</a></li>
+        <li><a href="https://github.com/bhold6160">GitHub</a></li>
       </ul>
     </nav>
     <img class="my-pic" src="images/Picture.jpg">
     <section>
       <h1>Brandon Holderman</h1>
-      <h2>This is where I will put some information about myself - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
     </section>
   </header>
   <main>
+    <h2>This is where I will put some information about myself - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
   <aside class="side-nav">
-    
+
   </aside>
   </main>
   <footer></footer>
