--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="vendor/normalize.css"> -->
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brandon Holderman</title>
@@ -17,12 +18,18 @@
     </nav>
     <img class="my-pic" src="images/Picture.jpg">
     <section>
-      <h1>Brandon Holderman</h1>
+      <h1 class="ontop">Brandon Holderman</h1>
+      <ul>
+        <li></li>
+      </ul>
     </section>
   </header>
-  <main>
+  <main class="about-me">
     <h2>This is where I will put some information about myself - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
   <aside class="side-nav">
+    <nav class="scrolling-nav">
+
+    </nav>
 
   </aside>
   </main>
