added constructor function and icons

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/icons.css">
+  <link rel="stylesheet" href="vendor/fonts/icomoon.eot">
+  <link rel="stylesheet" href="vendor/fonts/icomoon.svg">
+  <link rel="stylesheet" href="vendor/fonts/icomoon.ttf">
+  <link rel="stylesheet" href="vendor/fonts/icomoon.woff">
   <!-- <link rel="stylesheet" href="vendor/normalize.css"> -->
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,18 +15,24 @@
 </head>
 <body>
   <header class="header">
-    <nav class="top-nav">
+    <!-- <nav class="top-nav">
       <ul>
         <li><a href="https://www.linkedin.com/in/brandonholderman/">LinkedIn</a></li>
         <li><a href="https://github.com/bhold6160">GitHub</a></li>
       </ul>
-    </nav>
+    </nav> -->
+    <nav class="top-nav">
+  <span class="icon-menu"></span>
+  <ul>
+    <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
+    <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
+    <li><a href="http://twitter.com/brookr" target="_blank" class="icon-twitter3"> Twitter</a></li>
+    <li><a href="http://github.com/brookr" target="_blank" class="icon-github"> GitHub</a></li>
+  </ul>
+</nav>
     <img class="my-pic" src="images/Picture.jpg">
     <section>
       <h1 class="ontop">Brandon Holderman</h1>
-      <ul>
-        <li></li>
-      </ul>
     </section>
   </header>
   <main class="about-me">
