--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="vendor/fonts/icomoon.ttf">
   <link rel="stylesheet" href="vendor/fonts/icomoon.woff">
   <!-- <link rel="stylesheet" href="vendor/normalize.css"> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brandon Holderman</title>
@@ -25,9 +26,9 @@
   <span class="icon-menu"></span>
   <ul>
     <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
-    <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
-    <li><a href="http://twitter.com/brookr" target="_blank" class="icon-twitter3"> Twitter</a></li>
-    <li><a href="http://github.com/brookr" target="_blank" class="icon-github"> GitHub</a></li>
+    <li><a href="bhold6160@gmail.com" class="icon-mail4"> E-mail</a></li>
+    <li><a href="https://www.linkedin.com/in/brandonholderman/" target="_blank" class="icon-linkedin"> LinkedIn</a></li>
+    <li><a href="https://github.com/bhold6160" target="_blank" class="icon-github"> GitHub</a></li>
   </ul>
 </nav>
     <img class="my-pic" src="images/Picture.jpg">
@@ -39,11 +40,17 @@
     <h2>This is where I will put some information about myself - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
   <aside class="side-nav">
     <nav class="scrolling-nav">
-
+      <ul>
+        <li><a href="#">Top</a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+      </ul>
     </nav>
 
   </aside>
   </main>
   <footer></footer>
+  <script type="text/javascript" src="script/app.js"></script>
+  <script type="text/javascript" src="script/objects.js"></script>
 </body>
 </html>
