--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/icons.css">
-  <link rel="stylesheet" href="vendor/fonts/icomoon.eot">
-  <link rel="stylesheet" href="vendor/fonts/icomoon.svg">
-  <link rel="stylesheet" href="vendor/fonts/icomoon.ttf">
-  <link rel="stylesheet" href="vendor/fonts/icomoon.woff">
   <!-- <link rel="stylesheet" href="vendor/normalize.css"> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
@@ -16,17 +12,11 @@
 </head>
 <body>
   <header class="header">
-    <!-- <nav class="top-nav">
-      <ul>
-        <li><a href="https://www.linkedin.com/in/brandonholderman/">LinkedIn</a></li>
-        <li><a href="https://github.com/bhold6160">GitHub</a></li>
-      </ul>
-    </nav> -->
     <nav class="top-nav">
-  <span class="icon-menu"></span>
+  <!-- <span class="icon-menu"></span> -->
   <ul>
-    <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
-    <li><a href="bhold6160@gmail.com" class="icon-mail4"> E-mail</a></li>
+    <li class="tab" data-content="articles"><a href="index.html" class="icon-home"> Home</a></li>
+    <li><a href="mailto:bhold6160@gmail.com" class="icon-mail4"> E-mail</a></li>
     <li><a href="https://www.linkedin.com/in/brandonholderman/" target="_blank" class="icon-linkedin"> LinkedIn</a></li>
     <li><a href="https://github.com/bhold6160" target="_blank" class="icon-github"> GitHub</a></li>
   </ul>
@@ -38,19 +28,22 @@
   </header>
   <main class="about-me">
     <h2>This is where I will put some information about myself - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
-  <aside class="side-nav">
-    <nav class="scrolling-nav">
-      <ul>
-        <li><a href="#">Top</a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-      </ul>
-    </nav>
 
-  </aside>
+      <section class="data">
+        <section>
+          <h1 class="aboutTitle"></h1>
+        </Section>
+        <section>
+          <p id="locationId">Location:</p>
+          <p id="datesId">Dates:</p>
+          <p id="postionId">Position:</p>
+          <section class="article-body"><p>Description:</p></section>
+        </section>
+      </section>
+
   </main>
   <footer></footer>
-  <script type="text/javascript" src="script/app.js"></script>
   <script type="text/javascript" src="script/objects.js"></script>
+  <script type="text/javascript" src="script/app.js"></script>
 </body>
 </html>
