template data finally populating

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
   <main class="about-me">
     <h2>This is where I will put some information about myself - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
 
-    <!-- <script id="aboutTemplate" type="text/x-handlebars-template"> -->
       <section class="data">
         <section>
           <h1 class="aboutTitle"></h1>
@@ -35,26 +34,15 @@
         <section>
           <p id="locationId">Location:</p>
           <p id="datesId">Dates:</p>
-          <p id="postionId">Position:</p>
+          <p id="positionId">Position:</p>
           <section class="article-body"></section>
         </section>
       </section>
 
-    <!-- </script> -->
-
-  <!-- <aside class="side-nav">
-    <nav class="scrolling-nav">
-      <ul>
-        <li><a href="#">Top</a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-      </ul>
-    </nav>
-
-  </aside> -->
+      <section id="aboutData"></section>
+      
   </main>
   <footer></footer>
-  <script src="http://cloud.github.com/downloads/wycats/handlebars.js/handlebars-1.0.0.beta.6.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="script/objects.js"></script>
   <script type="text/javascript" src="script/app.js"></script>
 </body>
