added removeClass to prevent repetition of data

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
           <h1 class="aboutTitle"></h1>
         </Section>
         <section>
-          <p id="locationId">Location:</p>
-          <p id="datesId">Dates:</p>
-          <p id="positionId">Position:</p>
+          <p id="locationId"></p>
+          <p id="datesId"></p>
+          <p id="positionId"></p>
           <section class="article-body"></section>
         </section>
       </section>
 
       <section id="aboutData"></section>
-      
+
   </main>
   <footer></footer>
   <script type="text/javascript" src="script/objects.js"></script>
