--- a/index.html
+++ b/index.html
@@ -2,31 +2,36 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://use.fontawesome.com/261674d4f3.js"></script>
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brandon Holderman</title>
 </head>
 <body>
   <header class="header">
     <nav class="top-nav">
-  <!-- <span class="icon-menu"></span> -->
-  <ul>
-    <li class="tab" data-content="articles"><a href="index.html" class="icon-home"> Home</a></li>
-    <li><a href="mailto:bhold6160@gmail.com" class="icon-mail4"> E-mail</a></li>
-    <li><a href="https://www.linkedin.com/in/brandonholderman/" target="_blank" class="icon-linkedin"> LinkedIn</a></li>
-    <li><a href="https://github.com/bhold6160" target="_blank" class="icon-github"> GitHub</a></li>
-  </ul>
-</nav>
+
+      <!-- <span class="icon-menu"></span> -->
+      <!-- <i class="fa fa-home" aria-hidden="true"> -->
+      <ul>
+        <li class="tab" data-content="articles"></i><a href="#" class="icon-home">Home</a></li>
+        <li class="tab" data-content="about"><a href="#" class="icon-home">About</a></li>
+        <li><a href="mailto:bhold6160@gmail.com" class="icon-mail4">E-mail</a></li>
+        <li><a href="https://www.linkedin.com/in/brandonholderman/" target="_blank" class="icon-linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/bhold6160" target="_blank" class="icon-github">GitHub</a></li>
+      </ul>
+    </nav>
     <img class="my-pic" src="images/Picture.jpg">
     <section>
       <h1 class="ontop">Brandon Holderman</h1>
     </section>
   </header>
   <main class="about-me">
-    <h2>This is where I will put some information about myself - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
+    <!-- <h2>This is where I will put some information about myself - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2> -->
 
+    <section id="about" class="tab-content">
       <section class="data">
         <section>
           <h1 class="aboutTitle"></h1>
@@ -39,8 +44,10 @@
         </section>
       </section>
 
+      <section id="schoolData"></section>
       <section id="aboutData"></section>
 
+    </section>
   </main>
   <footer></footer>
   <script type="text/javascript" src="script/objects.js"></script>
