--- a/index.html
+++ b/index.html
@@ -9,10 +9,22 @@
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
   <title>Brandon Holderman</title>
 
-  <script id="template" type="text/x-handlebars-template">
+  <script id="template-resume" type="text/x-handlebars-template">
   <section id="about" class="tab-content">
     <section class="data">
-      <h1>{{name}}</h1>
+      <h2>{{name}}</h2>
+      <p>{{location}}</p>
+      <p>{{dates}}</p>
+      <p>{{position}}</p>
+      {{description}}
+    </section>
+  </section>
+</script>
+
+  <script id="template-school" type="text/x-handlebars-template">
+  <section id="about" class="tab-content">
+    <section class="data">
+      <h2>{{name}}</h2>
       <p>{{location}}</p>
       <p>{{dates}}</p>
       <p>{{position}}</p>
