--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </main>
   <footer></footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script>
-  <script type="text/javascript" src="script/objects.js"></script>
   <script type="text/javascript" src="script/app.js"></script>
+  <script type="text/javascript" src="script/appView.js"></script>
 </body>
 </html>
