added controllers directory with js files

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
       <section id="schoolData"></section>
       <section id="aboutData"></section>
+      <section id="porjectData"></section>
 
     </section>
   </main>
