--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   </main>
   <footer></footer>
-  <script src="page.js"></script>
+  <script src="/vendor/script/page.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script>
   <script src="/script/app.js"></script>
   <script src="/script/controllers/homeController.js"></script>
