added models folder and repojs

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section id="aboutData">
       <section id="schoolData"></section>
       <section id="aboutData"></section>
-      <section id="porjectData"></section>
+      <section id="projectData"></section>
     </section>
 
   </main>
@@ -69,6 +69,7 @@
   <script src="/vendor/script/page.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script>
   <script src="/script/app.js"></script>
+  <script src="/script/models/repo.js"></script>
   <script src="/script/controllers/homeController.js"></script>
   <script src="/script/controllers/aboutController.js"></script>
   <script src="/script/controllers/routes.js"></script>
